--- a/components/design-system/scss/helpers/_helpers-print.scss
+++ b/components/design-system/scss/helpers/_helpers-print.scss
@@ -1,5 +1,5 @@
-@use "@nice-digital/nds-core/scss/visibility";
-@use "@nice-digital/nds-core/scss/colours";
+@use '@nice-digital/nds-core/scss/visibility';
+@use '@nice-digital/nds-core/scss/colours';
 
 ////
 /// @group helpers
