--- a/components/nds-core/scss/focus/_index.scss
+++ b/components/nds-core/scss/focus/_index.scss
@@ -1,6 +1,6 @@
-@use "../spacing";
-@use "../colours";
-@use "../utils";
+@use '../spacing';
+@use '../colours';
+@use '../utils';
 
 ////
 /// @group helpers
