--- a/components/nds-core/scss/layout/_index.scss
+++ b/components/nds-core/scss/layout/_index.scss
@@ -1,5 +1,5 @@
-@use "../spacing";
-@use "../utils";
+@use '../spacing';
+@use '../utils';
 
 /// The maximum width of the default container, in pixels
 /// @since 0.5.2
