--- a/components/nds-core/scss/modular-scale/_index.scss
+++ b/components/nds-core/scss/modular-scale/_index.scss
@@ -1,4 +1,6 @@
-@use "sass:math";
+@use 'sass:math';
+
+// stylelint-disable number-max-precision
 
 /// Modular scale values
 /// @link http://www.modularscale.com/
