--- a/components/design-system/scss/typography/_typography-global.scss
+++ b/components/design-system/scss/typography/_typography-global.scss
@@ -1,8 +1,8 @@
-@use "@nice-digital/nds-core/scss/typography";
-@use "@nice-digital/nds-core/scss/utils";
-@use "@nice-digital/nds-core/scss/spacing";
-@use "@nice-digital/nds-core/scss/media-queries";
-@use "@nice-digital/nds-core/scss/colours";
+@use '@nice-digital/nds-core/scss/typography';
+@use '@nice-digital/nds-core/scss/utils';
+@use '@nice-digital/nds-core/scss/spacing';
+@use '@nice-digital/nds-core/scss/media-queries';
+@use '@nice-digital/nds-core/scss/colours';
 
 ////
 /// @group Typography
@@ -26,6 +26,7 @@ html {
       typography.$root-font-size-min +
         (typography.$root-font-size-max - typography.$root-font-size-min) * 0.5
     );
+
     // Follows "fluid typography" rules: https://www.google.co.uk/search?q=fluid%20typography%20vw
     // ie scales font-size linearly between 2 breakpoints.
     // Also uses rems so that they're relative to browser font size.
