--- a/components/design-system/scss/typography/_typography-quotations.scss
+++ b/components/design-system/scss/typography/_typography-quotations.scss
@@ -1,8 +1,8 @@
-@use "@nice-digital/nds-core/scss/typography";
-@use "@nice-digital/nds-core/scss/spacing";
-@use "@nice-digital/nds-core/scss/utils";
-@use "@nice-digital/nds-core/scss/glyphs";
-@use "@nice-digital/nds-core/scss/colours";
+@use '@nice-digital/nds-core/scss/typography';
+@use '@nice-digital/nds-core/scss/spacing';
+@use '@nice-digital/nds-core/scss/utils';
+@use '@nice-digital/nds-core/scss/glyphs';
+@use '@nice-digital/nds-core/scss/colours';
 
 ////
 /// @group Typography
