--- a/packages/dev-app/src/App.scss
+++ b/packages/dev-app/src/App.scss
@@ -3,7 +3,7 @@
 
 main {
   background: white;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 10px rgb(0 0 0 / 30%);
   position: relative;
 }
 
