--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -23,6 +23,7 @@ $text-print: global.$black;
 $btn-cta: global.$yellow;
 $btn-cta-hover: global.$custom-yellow-shade;
 $btn-cta-text: global.$nice-black;
+$btn-cta-border: global.$white;
 $btn-primary: global.$black-tint-1;
 $btn-primary-hover: global.$nice-black;
 $btn-primary-text: global.$white;
