NDS-257 CSS refactor

--- a/components/design-system/scss/base.scss
+++ b/components/design-system/scss/base.scss
@@ -1,5 +1,5 @@
 @charset 'utf-8';
 
 @forward 'normalize.css/normalize';
-@forward 'helpers/helpers';
-@forward 'typography/typography';
+@forward 'helpers';
+@forward 'typography';
